--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,7 @@
   font-family: 'Dm-Sans';
   src: url('/fonts/DMSans-Regular.ttf') format('truetype');
 }
+
+.android{
+    @apply max-w-[400px] min-w-[200px] max-h-[600px] min-h-[500px]
+}
